--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-    background-color: #4CAF50;
+    background-color: #AEC6CF;
     color: white;
     text-align: center;
     padding: 20px 0;
@@ -29,33 +29,47 @@ nav ul {
 }
 
 nav ul li {
-    display: inline;
+    display: inline-block;
     margin-right: 20px;
+    position: relative;
+    /* Added to position dropdown menu */
 }
 
 nav ul li a {
     color: white;
     text-decoration: none;
-}
-
-nav ul li a:hover {
-    text-decoration: underline;
-}
-
-nav ul ul {
-    display: none;
-    position: absolute;
-    background-color: #333;
-    border-top: 2px solid #4CAF50;
-    z-index: 1000;
+    display: block;
+    padding: 10px 20px;
+    /* Added padding to improve clickability */
 }
 
 nav ul li:hover>ul {
     display: block;
 }
 
+nav ul ul {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    border-top: 2px solid #ee6969;
+    z-index: 1000;
+    left: 0;
+    /* Adjusted to align with parent */
+    top: 100%;
+    /* Adjusted to position below parent */
+    width: 200px;
+    /* Adjusted width of dropdown menu */
+}
+
 nav ul ul li {
     display: block;
+    margin: 0;
+    /* Removed right margin to align with parent */
+}
+
+nav ul ul li a {
+    padding: 10px;
+    /* Added padding to improve aesthetics */
 }
 
 section {
@@ -64,7 +78,7 @@ section {
 }
 
 section h1 {
-    color: #4CAF50;
+    color: #ee6969;
 }
 
 section ul {
@@ -126,20 +140,18 @@ footer p {
 }
 
 .card-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 20px;
     margin-top: 20px;
-    max-width: 100%;
+    list-style-type: none;
+    padding: 0;
 }
 
 .card {
-    width: 250px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin: 10px;
     padding: 20px;
     text-align: center;
 }
@@ -149,7 +161,6 @@ footer p {
     border-radius: 50%;
     margin-bottom: 10px;
 }
-
 
 .services-section {
     padding: 20px;
