--- a/styles.css
+++ b/styles.css
@@ -187,6 +187,11 @@ footer p {
     margin-top: 0;
 }
 
+.service img {
+    max-width: 100%;
+    height: auto;
+}
+
 .service ul {
     list-style-type: none;
     padding: 0;
