--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Base Styles */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -9,7 +8,6 @@ body {
     padding: 20px;
 }
 
-/* Header Styles */
 header {
     background-color: #AEC6CF;
     color: white;
@@ -17,7 +15,6 @@ header {
     padding: 20px 0;
 }
 
-/* Navigation Styles */
 nav {
     background-color: #333;
     color: white;
@@ -68,7 +65,6 @@ nav ul ul li a {
     padding: 10px;
 }
 
-/* Promotional Message */
 .promo {
     background-color: #FDFD96;
     color: black;
@@ -77,7 +73,6 @@ nav ul ul li a {
     font-weight: bold;
 }
 
-/* Section Styles */
 section {
     margin: 20px 0;
     padding: 0 20px;
@@ -92,7 +87,6 @@ section ul {
     padding-left: 20px;
 }
 
-/* Footer Styles */
 footer {
     background-color: #333;
     color: white;
@@ -108,7 +102,6 @@ footer p {
     flex: 1;
 }
 
-/* Image Styles */
 .top_banner {
     display: flex;
     justify-content: space-between;
@@ -123,12 +116,10 @@ footer p {
 .home_images img {
     width: 45%;
     max-height: 400px;
-    margin-bottom: 20px;
+    margin: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
-
-/* Team Section Styles */
 
 .team_text p {
     padding: 20px;
@@ -136,7 +127,6 @@ footer p {
     max-width: auto;
 }
 
-/* Card Styles */
 .card_grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -160,13 +150,11 @@ footer p {
     margin-bottom: 10px;
 }
 
-/* Services Section Styles */
-
 .services p {
     margin: 0 auto;
     max-width: auto;
     padding: 20px;
-        text-align: center;
+    text-align: center;
 }
 
 .plan {
@@ -198,7 +186,6 @@ footer p {
     margin-bottom: 10px;
 }
 
-/* Gallery Section Styles */
 .gallery_text {
     padding: 20px;
     text-align: center;
@@ -219,7 +206,6 @@ footer p {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-/* Location Styles */
 .locations {
     display: flex;
     justify-content: space-around;
@@ -249,7 +235,7 @@ footer p {
 .location address {
     margin-top: 10px;
 }
-/* Form Styles */
+
 .form-container {
     width: 50%;
     margin: 0 auto;
@@ -292,7 +278,6 @@ input[type="submit"]:hover {
     background-color: #45a049;
 }
 
-/* Contact Section Styles */
 .contact_section {
     display: flex;
     justify-content: space-between;
@@ -315,16 +300,11 @@ input[type="submit"]:hover {
     height: auto;
 }
 
-
-/* Media Queries for Mobile Devices */
 @media only screen and (max-width: 768px) {
-
-    /* Header Styles */
     header {
         padding: 15px 0;
     }
 
-    /* Navigation Styles */
     nav {
         padding: 5px 0;
     }
@@ -337,13 +317,11 @@ input[type="submit"]:hover {
         padding: 8px 15px;
     }
 
-    /* Promotional Message */
     .promo {
         padding: 8px;
         font-size: 16px;
     }
 
-    /* Section Styles */
     section {
         margin: 15px 0;
         padding: 0 15px;
@@ -353,35 +331,31 @@ input[type="submit"]:hover {
         font-size: 24px;
     }
 
-    /* Footer Styles */
     footer {
         padding: 15px 0;
     }
 
-    /* Image Styles */
     .top_banner img {
         max-height: 150px;
     }
-    .top_banner p{
+
+    .top_banner p {
         display: none;
     }
 
-    .top_banner .banner_dog{
+    .top_banner .banner_dog {
         display: none;
     }
-
 
     .home_images img {
         width: 100%;
         max-height: 300px;
     }
 
-    /* Team Section Styles */
     .team_text p {
         padding: 15px;
     }
 
-    /* Card Styles */
     .card {
         padding: 15px;
     }
@@ -391,7 +365,6 @@ input[type="submit"]:hover {
         margin-bottom: 8px;
     }
 
-    /* Services Section Styles */
     .services p {
         padding: 15px;
     }
@@ -400,7 +373,6 @@ input[type="submit"]:hover {
         padding: 15px;
     }
 
-    /* Gallery Section Styles */
     .gallery_text {
         padding: 15px;
     }
@@ -410,18 +382,15 @@ input[type="submit"]:hover {
         margin: 8px;
     }
 
-    /* Location Styles */
     .locations li {
         width: 100%;
         margin: 5px 0;
     }
 
-    /* Form Styles */
     .form-container {
         width: 100%;
     }
 
-    /* Contact Section Styles */
     .contact_section {
         flex-direction: column;
         align-items: center;
